--- a/frontend.yml
+++ b/frontend.yml
@@ -1,34 +1,34 @@
-- name: SetUp Frontend
-  host: all
-  become: yes
-  tasks:
-    - name: Install the latest version of nginx
-      ansible.builtin.yum:
-        name: nginx
-        state: latest
+  - name: SetUp Frontend
+    hosts: all
+    become: yes
+    tasks:
+      - name: Install the latest version of nginx
+        ansible.builtin.yum:
+          name: nginx
+          state: latest
 
-    - name: Recursively remove directory
-      ansible.builtin.file:
-        path: /usr/share/nginx/html
-        state: absent
-
-    - name: create directory
-      ansible.builtin.file:
+      - name: Recursively remove directory
+        ansible.builtin.file:
           path: /usr/share/nginx/html
-          state: directory
+          state: absent
 
-    - name: Download and extract frontend content
-      ansible.builtin.unarchive:
-        src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-        dest: /usr/share/nginx/html/
-        remote_src: yes
+      - name: create directory
+        ansible.builtin.file:
+            path: /usr/share/nginx/html
+            state: directory
 
-    - name: Copy roboshop configuration
-      ansible.builtin.copy:
-        src: roboshop.conf
-        dest: /etc/nginx/default.d/roboshop.conf
+      - name: Download and extract frontend content
+        ansible.builtin.unarchive:
+          src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
+          dest: /usr/share/nginx/html/
+          remote_src: yes
 
-    - name: Start service nginx, if not started
-      ansible.builtin.service:
-        name: nginx
-        state: restarted
+      - name: Copy roboshop configuration
+        ansible.builtin.copy:
+          src: roboshop.conf
+          dest: /etc/nginx/default.d/roboshop.conf
+
+      - name: Start service nginx, if not started
+        ansible.builtin.service:
+          name: nginx
+          state: restarted
