--- a/roles/common/tasks/mongo_schema_setup.yml
+++ b/roles/common/tasks/mongo_schema_setup.yml
@@ -1,7 +1,7 @@
 - name: copy mongodb repo file
   ansible.builtin.copy:
     src: mongodb.repo
-    dest: /etc/yum.repos.de/mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
 
 - name: Install mongodb client
   ansible.builtin.yum:
