--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -5,7 +5,7 @@
     disable_gpg_check: true
 
 - name: Enable Redis 6 version
-  ansible.builtin.shell: yum module enable ${component}:remi-6.2 -y
+  ansible.builtin.shell: yum module enable redis:remi-6.2 -y
 
 - name: Install Redis
   ansible.builtin.dnf:
